--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="author" content="Scott Kaye">
 	<title>Solar System</title>
 	<link href="http://fonts.googleapis.com/css?family=Orbitron:700" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="style/solar-system-style.css">
 	<link rel="stylesheet" href="style/site.css">
 </head>
 
@@ -14,6 +16,7 @@
 
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/vendor/raphael-min.js"></script>
+	<script src="js/solar-system-helpers.js"></script>
 	<script src="js/solar-system-api.js"></script>
 	<script src="js/solar-system-gui.js"></script>
 	<script src="js/run.js"></script>
