Added sidebar, many improvements
Too many improvements to even write a meaningful commit message!

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 </head>
 
 <body>
+	<input type="checkbox" id="side-toggle" checked>
 
+	<div id="side"></div>
 	<div id="solar-system"></div>
+	<footer>
+		Created by Scott Kaye
+	</footer>
 
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/vendor/raphael-min.js"></script>
